[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/godot-rollback-netcode/debugger/PeerStatus.gd" type="Script" id=1]

[node name="PeerStatus" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_minimum_size = Vector2( 200, 0 )
mouse_filter = 2
color = Color( 0, 0, 0, 0.498039 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
offset_right = 1260.0
offset_bottom = 86.0
mouse_filter = 2
size_flags_horizontal = 3
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PeerIdLabel" type="Label" parent="VBoxContainer/GridContainer"]
offset_right = 628.0
offset_bottom = 14.0
size_flags_horizontal = 3
text = "Peer ID:"

[node name="PeerIdValue" type="Label" parent="VBoxContainer/GridContainer"]
offset_left = 632.0
offset_right = 1260.0
offset_bottom = 14.0
size_flags_horizontal = 3
text = "0"

[node name="RTTLabel" type="Label" parent="VBoxContainer/GridContainer"]
offset_top = 18.0
offset_right = 628.0
offset_bottom = 32.0
text = "RTT:"

[node name="RTTValue" type="Label" parent="VBoxContainer/GridContainer"]
offset_left = 632.0
offset_top = 18.0
offset_right = 1260.0
offset_bottom = 32.0
text = "0"

[node name="LocalLagLabel" type="Label" parent="VBoxContainer/GridContainer"]
offset_top = 36.0
offset_right = 628.0
offset_bottom = 50.0
text = "Local lag:"

[node name="LocalLagValue" type="Label" parent="VBoxContainer/GridContainer"]
offset_left = 632.0
offset_top = 36.0
offset_right = 1260.0
offset_bottom = 50.0
text = "0"

[node name="RemoteLagLabel" type="Label" parent="VBoxContainer/GridContainer"]
offset_top = 54.0
offset_right = 628.0
offset_bottom = 68.0
text = "Remote lag:"

[node name="RemoteLagValue" type="Label" parent="VBoxContainer/GridContainer"]
offset_left = 632.0
offset_top = 54.0
offset_right = 1260.0
offset_bottom = 68.0
text = "0"

[node name="AdvantageLabel" type="Label" parent="VBoxContainer/GridContainer"]
offset_top = 72.0
offset_right = 628.0
offset_bottom = 86.0
text = "Avg. Advantage:"

[node name="AdvantageValue" type="Label" parent="VBoxContainer/GridContainer"]
offset_left = 632.0
offset_top = 72.0
offset_right = 1260.0
offset_bottom = 86.0
text = "0"

[node name="MessagesLabel" type="Label" parent="VBoxContainer"]
offset_top = 90.0
offset_right = 67.0
offset_bottom = 104.0
size_flags_horizontal = 0
text = "Messages:"

[node name="MessagesValue" type="RichTextLabel" parent="VBoxContainer"]
offset_top = 108.0
offset_right = 1260.0
offset_bottom = 700.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_active = false
scroll_following = true
